[fix]github actionsに関する設定

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -3,7 +3,7 @@ name: GitHub Pages
 on:
   push:
     branches:
-      - master  # Set a branch to deploy
+      - master  # デプロイのトリガーとなるブランチ
   pull_request:
 
 jobs:
@@ -14,8 +14,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          submodules: true  # Fetch Hugo themes (true OR recursive)
-          fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
+          submodules: true  # Hugoテーマの取得
+          fetch-depth: 0    # 履歴の完全取得
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
@@ -26,8 +26,8 @@ jobs:
       - name: Build
         run: hugo --minify
 
-      - name: Check ref
-        run: echo "GITHUB_REF=${{ github.ref }}"
+      - name: List build directory
+        run: ls -la ./public
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
