Add personal icon integration to website
- Add icon configuration to _config.yml
- Update header to display icon next to site title
- Add prominent hero icon to homepage layout
- Include image.png in proper static assets location

--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,9 @@ minima:
     github: yutojubako
     # Add other social platforms as needed
 
+# Site icon
+icon: "/static/images/image.png"
+
 # Additional site information
 location: "Yokohama, Japan"
 institution: "Keio University"
